# docconv

./: .gitignore  README.md  install.sh  pyproject.toml
docconv/: cli.py  config.py  router.py
docconv/converters/: base.py  docx.py  pdf.py  pdf_scan.py  spreadsheet.py
docconv/utils/: postprocess.py
docs/: architect.md
tests/: conftest.py  test_cli.py  test_config.py  test_converter_docx.py  test_converter_pdf.py  test_converter_pdf_scan.py  test_converter_spreadsheet.py  test_postprocess.py  test_router.py
